# openapi/talai-api.yaml
@@ -36,13 +36,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Busstop'
-  /busstop/{stopId}/weather:
+  /busstop/{stopId}/weather/{sensor}:
     parameters:
       - name: stopId
         in: path
         required: true
         schema:
           type: integer
+      - name: sensor
+        in: path
+        required: true
+        schema:
+          type: string
     get:
       summary: Returns weather detail of the specified Talai bus stop
       operationId: controller.get_busstop_weather
@@ -52,7 +57,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BusstopWeather'
+                type: array
+                items:
+                  $ref: '#/components/schemas/BusstopWeather'
   /routes:
     get:
       summary: Returns a list of routes of KU Talai bus
@@ -89,7 +96,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: integer
+                  $ref: '#/components/schemas/Route'
   /route/{busId}:
     parameters:
       - name: busId
@@ -173,6 +180,8 @@ components:
           type: string
         amount:
           type: number
+        sensor:
+          type: string
     PopulationDensity:
       type: object
       properties:
